--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ table {
 #conjugation-table td {
     padding: 8px; /* Consistent padding */
     border-bottom: 1px solid var(--border-color);
-    border-right: 1px solid var(--border-color); /* Consistent vertical borders (RTL: right) */
+    border-left: 1px solid var(--border-color); /* Consistent vertical borders (RTL: right) */
 }
 
 
