--- a/index.html
+++ b/index.html
@@ -1053,9 +1053,9 @@ body.dark-mode .popup {
 
 /* When a cell is in wrapping mode, allow text to wrap */
 #conjugation-table td.clickable.wrapping {
-    white-space: normal !important;
-    overflow: visible !important;
-    text-overflow: clip !important;
+    white-space: normal;
+    overflow: visible;
+    text-overflow: clip;
     /* Add a visual indicator for debugging */
     background-color: #f0f0f0; /* Light gray background when wrapping */
 }
